all links visible, and dist folder is no longer ignored

--- a/main/client/styles/globalStyles.styl
+++ b/main/client/styles/globalStyles.styl
@@ -3,4 +3,5 @@ body
 	margin 0
 	width 100%
 	height 100%
-	font-family sans-serif
+	font-family 'Open Sans', sans-serif
+	font-weight 400
