--- a/main/client/styles/menuBarStyles.styl
+++ b/main/client/styles/menuBarStyles.styl
@@ -27,12 +27,12 @@
 		color #f4f4f4
 		
 #auth-modal
-	width 400px
-	height 530px
+	width 410px
+	height 410px
 	overflow hidden
 	position relative
 	border-radius 10px
 	
 	iframe
-		width 400px
-		height 530px
+		width 410px
+		height 410px
